Fixed word-spacing to be the actually desired value.

--- a/css/site.css
+++ b/css/site.css
@@ -123,7 +123,7 @@ pre code {
     width: 100%;
     font-size: 24px;
     line-height: 1.6;
-    word-spacing: 0.8em;
+    word-spacing: 0.08em;
     font-family: Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight: 400;
 }
